--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     links to other pages "About" "Portfolio" and "Contact" are right justified, most
     likely 3 separate divs with a bolded or colored single margin. Grey
     backgound to body. White background to central div. Small "copyright" and icon in footer. Footer 
-    is a gunmetal grey. -->
+    is a gunmetal grey. It appears that all pages will have the same base with center divs of differing sizes.-->
     
     <header>
+        <!-- Will need to have 4 divs that are links that live here. 
+        The first div will be Your Name situated above the upper left 
+        of the center div. Three smaller divs will have to right justified here. -->
 
     </header>
 
