--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
         <!-- Will need to have 4 divs that are links that live here. 
         The first div will be Your Name situated above the upper left 
         of the center div. Three smaller divs will have to right justified here. -->
-
+        <p>Your Name</p>
+        <p>About</p>
+        <p>Portfolio</p>
+        <p>Contact</p>
     </header>
 
     <div>
         <h1>
-
+            About me
         </h1>
 
         <hr/>
@@ -35,7 +38,15 @@
         <section>
             <img>
             <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor maiores, voluptatum magni iste commodi odio voluptates culpa aliquid tempore porro ad officiis minima dicta ipsam, cum provident vero accusantium id?
+            </p>
 
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed in ducimus suscipit alias facilis omnis voluptatum soluta reiciendis quam nam veniam qui, beatae quas hic. Architecto soluta labore quas animi.
+            </p>
+
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis provident maxime, odio laborum inventore nesciunt magnam tempore asperiores ratione officiis vel facere quo nam aperiam culpa amet deleniti corrupti quos?
             </p>
         </section>
 
