--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
 </head>
 <body>
     <!-- First page: Header with what looks like a div and the position
@@ -36,7 +36,7 @@
         <!-- Possible child div here to account for img and p elements. Set
         them to either flex or inline-block -->
         <section>
-            <img>
+            <img src="https://picsum.photos/200">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor maiores, voluptatum magni iste commodi odio voluptates culpa aliquid tempore porro ad officiis minima dicta ipsam, cum provident vero accusantium id?
             </p>
@@ -52,5 +52,8 @@
 
 
     </div>
+    <footer>
+        Copyright&#xa9 
+    </footer>
 </body>
 </html>
