--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         <!-- Will need to have 4 divs that are links that live here. 
         The first div will be Your Name situated above the upper left 
         of the center div. Three smaller divs will have to right justified here. -->
-        <p>Your Name</p>
-        <p>About</p>
-        <p>Portfolio</p>
-        <p>Contact</p>
+        
+        <p class="name_box">Your Name</p>
+        <a href="page2.html">About</a>
+        <a href="page3.html">Portfolio</a>
+        <a href="page4.html">Contact</a>
     </header>
 
     <div>
