--- a/index.html
+++ b/index.html
@@ -42,18 +42,22 @@
             
             <hr/>
 
-            <img src="https://picsum.photos/200">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor maiores, voluptatum magni iste commodi odio voluptates culpa aliquid tempore porro ad officiis minima dicta ipsam, cum provident vero accusantium id?
-            </p>
+            <div class="inner_block">
+            
+                <p class="clear_fix">
+                    <img src="https://picsum.photos/200">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor maiores, voluptatum magni iste commodi odio voluptates culpa aliquid tempore porro ad officiis minima dicta ipsam, cum provident vero accusantium id?
+                </p>
 
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed in ducimus suscipit alias facilis omnis voluptatum soluta reiciendis quam nam veniam qui, beatae quas hic. Architecto soluta labore quas animi.
-            </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed in ducimus suscipit alias facilis omnis voluptatum soluta reiciendis quam nam veniam qui, beatae quas hic. Architecto soluta labore quas animi.
+                </p>
 
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis provident maxime, odio laborum inventore nesciunt magnam tempore asperiores ratione officiis vel facere quo nam aperiam culpa amet deleniti corrupti quos?
-            </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis provident maxime, odio laborum inventore nesciunt magnam tempore asperiores ratione officiis vel facere quo nam aperiam culpa amet deleniti corrupti quos?
+                </p>
+
+            </div>
         </section>
 
 
