--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
 
             <div class="inner_block">
             
-                <p class="clear_fix">
-                    <img src="https://picsum.photos/200">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor maiores, voluptatum magni iste commodi odio voluptates culpa aliquid tempore porro ad officiis minima dicta ipsam, cum provident vero accusantium id?
-                </p>
+                <div class="clear_fix">
+                    <img src="https://picsum.photos/150">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor maiores, voluptatum magni iste commodi odio voluptates culpa aliquid tempore porro ad officiis minima dicta ipsam, cum provident vero accusantium id? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi vel placeat nam iste repellat sed laboriosam quis modi? 
+                    Sunt tempore consectetur sit hic reprehenderit vero alias quia dolorum, eius dignissimos. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere quidem unde accusantium asperiores ad perspiciatis labore? Tenetur enim error earum nisi ipsa, porro quas voluptates numquam voluptate unde culpa labore.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad sapiente qui nostrum fuga nam eius eveniet illum. Aspernatur facere consequuntur laudantium eius, officiis odio temporibus ex est! Ipsa, cumque animi!
+                </div>
 
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed in ducimus suscipit alias facilis omnis voluptatum soluta reiciendis quam nam veniam qui, beatae quas hic. Architecto soluta labore quas animi.
