--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div class="link_box">
             <a href="page2.html">About</a>
-            <a href="page3.html">Portfolio</a>
+            <a class="link_style" href="page3.html">Portfolio</a>
             <a href="page4.html">Contact</a>
         </div>
         
@@ -51,11 +51,11 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad sapiente qui nostrum fuga nam eius eveniet illum. Aspernatur facere consequuntur laudantium eius, officiis odio temporibus ex est! Ipsa, cumque animi!
                 </div>
 
-                <p>
+                <p class="p_block">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed in ducimus suscipit alias facilis omnis voluptatum soluta reiciendis quam nam veniam qui, beatae quas hic. Architecto soluta labore quas animi.
                 </p>
 
-                <p>
+                <p class="p_block">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis provident maxime, odio laborum inventore nesciunt magnam tempore asperiores ratione officiis vel facere quo nam aperiam culpa amet deleniti corrupti quos?
                 </p>
 
@@ -65,7 +65,9 @@
 
     </div>
     <footer>
-        Copyright&#xa9 
+        <p class="p_foot">
+            Copyright&#xa9
+        </p> 
     </footer>
 </body>
 </html>
