--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zxx">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -46,7 +46,7 @@
             <div class="inner_block">
             
                 <div class="clear_fix">
-                    <img src="https://picsum.photos/150">
+                    <img src="https://picsum.photos/150" alt="Random Pic">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor maiores, voluptatum magni iste commodi odio voluptates culpa aliquid tempore porro ad officiis minima dicta ipsam, cum provident vero accusantium id? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi vel placeat nam iste repellat sed laboriosam quis modi? 
                     Sunt tempore consectetur sit hic reprehenderit vero alias quia dolorum, eius dignissimos. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere quidem unde accusantium asperiores ad perspiciatis labore? Tenetur enim error earum nisi ipsa, porro quas voluptates numquam voluptate unde culpa labore.
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad sapiente qui nostrum fuga nam eius eveniet illum. Aspernatur facere consequuntur laudantium eius, officiis odio temporibus ex est! Ipsa, cumque animi!
@@ -67,7 +67,7 @@
     </div>
     <footer>
         <p class="p_foot">
-            Copyright&#xa9
+            Copyright&#xa9;
         </p> 
     </footer>
 </body>
