--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="zxx">
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"/> -->
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 </head>
 <body>
     <!-- First page: Header with what looks like a div and the position
