--- a/page2.html
+++ b/page2.html
@@ -24,9 +24,9 @@
         <div class="name_box">Your Name</div>
 
         <div class="link_box">
-            <a href="page2.html">About</a>
+            <a href="index.html">About</a>
             <a class="link_style" href="page3.html">Portfolio</a>
-            <a href="page4.html">Contact</a>
+            <a href="page2.html">Contact</a>
         </div>
         
     </header>
