--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis provident maxime, odio laborum inventore nesciunt magnam tempore asperiores ratione officiis vel facere quo nam aperiam culpa amet deleniti corrupti quos?
                 </p>
 
+                <p class="p_block">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, a. Tenetur at dolores, error ratione labore repellat facere laudantium aperiam eum! Explicabo perspiciatis, magni deserunt laborum iure dolores. Nihil, et.  
+                </p>
+
+                <p class="p_block">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi aliquid nobis minima, ipsa ex laborum? Perferendis, impedit voluptatem tempora reprehenderit aut cupiditate explicabo quia laboriosam fugit natus! Blanditiis, unde culpa?
+                </p>
+
             </div>
         </section>
 
