--- a/page2.html
+++ b/page2.html
@@ -45,17 +45,17 @@
             <form class="inner_block">
                 <div class="form_format">
                     Name<br>
-                    <input type="text" name="Name"><br>
+                    <input type="text" name="Name" size="25"><br>
                 </div>
                 <br>
                 <div class="form_format">
                     Email<br>
-                    <input type="email" name="Email Address"><br>
+                    <input type="email" name="Email Address" size="25"><br>
                 </div>
                 <br>
                 <div class="form_format">
                     Message<br>
-                    <textarea name="Message"></textarea><br>
+                    <textarea name="Message" size="25"></textarea><br>
                 </div>
                 <br>
                 <button type="submit">Submit</button>
