--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,8 @@
 
         <div class="link_box">
             <a href="index.html">About</a>
-            <a class="link_style" href="page3.html">Portfolio</a>
-            <a href="page2.html">Contact</a>
+            <a class="link_style" href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
         </div>
         
     </header>
@@ -43,18 +43,18 @@
             <hr/>
 
             <form class="inner_block">
-                <div class="form_format">
-                    Name<br>
+                <div>
+                    <p class="form_format">Name</p><br>
                     <input type="text" name="Name" size="25"><br>
                 </div>
                 <br>
-                <div class="form_format">
-                    Email<br>
+                <div>
+                    <p class="form_format">Email</p><br>
                     <input type="email" name="Email Address" size="25"><br>
                 </div>
                 <br>
-                <div class="form_format">
-                    Message<br>
+                <div>
+                    <p class="form_format">Message</p><br>
                     <textarea name="Message" size="25"></textarea><br>
                 </div>
                 <br>
