--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,8 @@
 
         <div class="link_box">
             <a href="index.html">About</a>
-            <a class="link_style" href="page3.html">Portfolio</a>
-            <a href="page2.html">Contact</a>
+            <a class="link_style" href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
         </div>
         
     </header>
